beryllium (0.3.16) debian;

  * Localization fix
  * Customizable hotkeys
  * Reduced minimal size
  * New command line options:
  *   --patient-birthdate (-b)
  *   --patient-id (-i)
  *   --patient-name (-n)
  *   --patient-sex (-s)
  *   --physician (-p)
  *   --study-name (-e)
  
 -- Pavel Bludov <pbludov@gmail.com>  Tue, 21 Jan 2014 14:42:12 +0900

beryllium (0.3.15) debian;

  * Simple video editor (can only cut video head/tail)
  * Fix mpegps format detector

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 22 Oct 2013 15:39:00 +0900

beryllium (0.3.14) debian;

  * Windows compatible build

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 8 Oct 2013 17:46:00 +0900

beryllium (0.3.13) debian;

  * Touch preview

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 27 Sep 2013 15:56:00 +0900

beryllium (0.3.12) debian;

  * Slash in patient id fix

 -- Pavel Bludov <pbludov@gmail.com>  Thu, 26 Sep 2013 12:48:57 +0900

beryllium (0.3.11) debian;

  * Fix SIGABRT after changing folder throught a dropdown submenu
  * Fix mpeg2 video storing

 -- Pavel Bludov <pbludov@gmail.com>  Tue, 24 Sep 2013 17:21:00 +0900

beryllium (0.3.10) debian;

  * Fixed possible NRE in broken video playback
  * Suppessed gstreamer warning about missing "handoff" when fill video record is off
  * Until first study archive window shows root filder, not epmty folder with bogus name
  * Insert DCM_SpecificCharacterSet, DCM_SOPInstanceUID & DCM_StudyInstanceUID attributes if missed
  * Fixed .patient.dcm save for libdcmtk < 3.6.1
  * Report C-Store transfer errors to the user

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 20 Sep 2013 18:30:00 +0900

beryllium (0.3.9) debian;

  * DICOM debug command line switches

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 13 Sep 2013 14:40:57 +0900

beryllium (0.3.8) debian;

  * First build

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 26 Apr 2013 19:46:55 +0900