@@ -1,6 +1,6 @@
 dicom {
     QT        += network
-    unix:LIBS += -ldcmnet -lwrap -ldcmdata -loflog -lofstd -lssl -lz
+    unix:LIBS += -ldcmnet -ldcmdata -loflog -lofstd -lssl -lz
     DEFINES   += WITH_DICOM
 
     SOURCES   += \
