@@ -33,11 +33,6 @@ HotKeyEdit::HotKeyEdit(QWidget *parent)
 
 void HotKeyEdit::updateText()
 {
-    qDebug() << m_key << " " <<
-    (0 == m_key? tr("(not set)"):
-        0  < m_key? QKeySequence(m_key).toString():
-        MouseShortcut::toString(m_key));
-
     setText(0 == m_key? tr("(not set)"):
         0  < m_key? QKeySequence(m_key).toString():
         MouseShortcut::toString(m_key));
